--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="action_example">Example action</string>
     <string name="title_activity_call_jiney_base">CallJineyBaseActivity</string>
     <string name="title_activity_calljineybase">Calljineybase</string>
-
+    <string name="action_search">Calljineybase</string>
 
     <string-array name="nav_drawer_items">
         <item>Home</item>
@@ -35,5 +35,6 @@
     </array>
 
     <string name="desc_list_item_icon">Item Icon</string>
+    <string name="title_activity_search">SearchActivity</string>
 
 </resources>
